--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="row">
         
-        <div class="col-md m-2">
+        <div class="col-md-4 m-2">
           
             <h2>Bitcoin</h2>
                 <!-- <p><b>Metrics and Change</b> </p> -->
