--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
         <div class="col-md-6 m-2">
             <h3>Bitcoin</h3>
             <p class="custom-font-size">
-                Three LSTM models were constructed, the first with the full range of dates, the second and third beginning in 2018, when the price saw a first major increase. All 3 models use a 7 day lookback window for input with 1 LSTM layer and 2 hidden layers. An R2 Score of .96 was achieved with the first model, which could not be improved upon with the other optimizations.            </p>
+                Three LSTM models were constructed, the first with the full range of dates, the second and third beginning in 2018, when the price saw a first major increase. All 3 models use a 30 day lookback window for input with 1 LSTM layer and 2 hidden layers. An R2 Score of .92 was achieved with the third model. 
+            </p>
         </div>
     </div>
  
@@ -159,7 +160,7 @@
         <div class="col-md-6 m-2">
             <h3>Ethereum</h3>
             <p class="custom-font-size">
-                As with Bitcoin, 3 LSTM models were built to train and test on historical data, with the second and third using just the most recent half of the data. The R2 Score was .90 using the third model, which was trained for 300 epochs.    </div>
+                Ethereum trained better using a 7 day lookback window. As with Bitcoin, the initial dataset was reduced to focus on the recent 50% of dates for the second two models. The R2 Score was .90 using the third model, which was trained for 300 epochs.
             </p>
         </div>
     </div>
@@ -178,7 +179,7 @@
         <div class="col-md-6 m-2">
             <h3>Litecoin</h3>
             <p class="custom-font-size">
-                Litecoin also used 3 LSTM models with a max R2 Score of .92 using the third model with a learning rate of .0001, trained for 300 epochs. As with the other 2 currencies, the 3 models performed similarly in testing and prediction. It may be possible to achieve a higher R2 Score with increased epochs of training or a slower learning rate but it is not immediately clear if this will have the effect of greater accuracy in future prediction given the extent that all outside factors have on value change in currencies.        
+                Litecoin also used 30 Day Lookback LSTM models with a max R2 Score of .92 using the first model with a learning rate of .0001, trained for 300 epochs. As with the other 2 currencies, the 3 models performed similarly in testing and prediction. It may be possible to achieve a higher R2 Score with increased epochs of training or a slower learning rate but it is not immediately clear if this will have the effect of greater accuracy in future prediction given the extent that all outside factors have on value change in currencies.             </p>
             </p>
         </div>
     </div>
