adjust bitcoin pred

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="col-md-6 m-2">
             <h3>Bitcoin</h3>
             <p class="custom-font-size">
-                Three LSTM models were constructed, the first with the full range of dates, the second and third beginning in 2018, when the price saw a first major increase. In this case, we experimented with using a Bidirectional LSTM, which yielded very high scores for the first model but poorer results for the reduced dataset. As a result, we only used the Bidirectional method for the first model, which we chose for prediction. The first 2 models use a 7 day lookback window for input with 1 LSTM layer and 2 hidden layers. The third model uses 2 LSTM layers and 1 hidden layer. An R2 Score of .96 was achieved with the first model. 
+                Three LSTM models were constructed, the first with the full range of dates, the second and third beginning in 2018, when the price saw a first major increase. In this case, we experimented with using a Bidirectional LSTM, which yielded very high scores for the first model but poorer results for the reduced dataset. As a result, we only used the Bidirectional method for the first model, which we chose for prediction. The first 2 models use a 7 day lookback window for input with 1 LSTM layer and 2 hidden layers. The third model uses 2 LSTM layers and 1 hidden layer. An R2 Score of .92 was achieved with the second model. 
             </p>
         </div>
     </div>
