--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <div class="row">
         <div class="col-md-12 jumbotron text-center">
-          <h1>Breakdowns by Currency</h1>
+          <h1>Breakdown by Currency</h1>
           <p>Lifetime price, predicted price, and testing results from training.</p>
         </div>
     </div>
