--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         
         <div class="row">
-            <div class="col-md-12 jumbotron text-center">
+            <div class="col-xl-1 jumbotron text-center">
                 <h1>Predicting Cryptocurrency</h1>
                 <p>LSTM Models for Forecasting the Value of Bitcoin, Ethereum and Litecoin</p>
             </div>
